[project]
name = ""
version = ""
description = ""
authors = [
    {name = "abhishek-yanjarappa", email = "75441358+abhishek-yanjarappa@users.noreply.github.com"},
]
dependencies = [
    "quart>=0.17.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.scripts]
dev = "quart run"
